--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -2,6 +2,7 @@
 
 @tailwind base;
 
+/*! purgecss start ignore */
 :root {
 
   // Background color
@@ -29,7 +30,7 @@
 
 }
 
-/*! purgecss start ignore */
+
 .theme-dark {
 
   // Background color
@@ -61,9 +62,16 @@
 
 
 
+
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+
+
+/*! purgecss start ignore */
 
 // Inverse Mixin
 inverse-style(prop, value, inverse-prop, default-value) {
@@ -74,6 +82,8 @@ inverse-style(prop, value, inverse-prop, default-value) {
 		{prop}: default-value;
 	}
 }
+
+/*! purgecss end ignore */
 
 @require '~prismjs/themes/prism-okaidia.css'
 @require 'palette'
