--- a/.vuepress/theme/styles/ribbons.styl
+++ b/.vuepress/theme/styles/ribbons.styl
@@ -1,3 +1,4 @@
+/*! purgecss start ignore */
 $ribbon-width = 100px
 $ribbon-height = 30px
 $ribbon-border = 4px
@@ -52,3 +53,4 @@ $ribbon-distance = ($ribbon-width / 2) - ($ribbon-height / 2) / 1.44
     .ribbon.river > span { @apply .bg-river; }
     .ribbon.river::before, .ribbon.river::after { @apply .border-blue-700; }
 }
+/*! purgecss end ignore */
