optimze css even more

--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -91,9 +91,8 @@ inverse-style(prop, value, inverse-prop, default-value) {
 @require 'tables'
 @require 'ribbons'
 
-/*! purgecss start ignore */
-@import '~prismjs/themes/prism-okaidia.css'
+@require '~prismjs/themes/prism-okaidia.css'
 @require 'code'
 @require 'container'
 @require 'content'
-/*! purgecss end ignore */
+
