--- a/.vuepress/theme/styles/container.styl
+++ b/.vuepress/theme/styles/container.styl
@@ -5,7 +5,7 @@ $secondBleedingPoint = 1040px
 
 $container
     width 100%
-    max-width theme('screens.md')
+    max-width theme('screens.xl')
     margin-right auto
     margin-left auto
     padding-left theme('padding.8')
