Fix code blocks

--- a/.vuepress/theme/styles/container.styl
+++ b/.vuepress/theme/styles/container.styl
@@ -34,7 +34,7 @@ $break-out-of-container
         right inherit
         margin-left inherit
         margin-right inherit
-        width theme('screens.xl')
+        // width theme('screens.xl')
 
 $flex-container
     @extends $container
