--- a/.vuepress/theme/styles/ribbons.styl
+++ b/.vuepress/theme/styles/ribbons.styl
@@ -47,8 +47,8 @@ $ribbon-distance = ($ribbon-width / 2) - ($ribbon-height / 2) / 1.44
         transform rotate(-45deg)
 
 @css {
-    .ribbon.topaz > span { @apply .bg-topaz; }
-    .ribbon.topaz::before, .ribbon.topaz::after { @apply .border-red-800; }
-    .ribbon.river > span { @apply .bg-river; }
-    .ribbon.river::before, .ribbon.river::after { @apply .border-blue-700; }
+    .ribbon.topaz > span { @apply bg-topaz; }
+    .ribbon.topaz::before, .ribbon.topaz::after { @apply border-red-800; }
+    .ribbon.river > span { @apply bg-river; }
+    .ribbon.river::before, .ribbon.river::after { @apply border-blue-700; }
 }
