--- a/.vuepress/templates/dev.html
+++ b/.vuepress/templates/dev.html
@@ -14,7 +14,7 @@
 		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
 		<title></title>
 	</head>
 	<body>
