--- a/.vuepress/templates/ssr.html
+++ b/.vuepress/templates/ssr.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html dir="" lang="{{ lang }}">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-6V2PD0VWZE"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-6V2PD0VWZE');
+		</script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<title>{{ title }}</title>
 		<meta name="description" content="{{ description }}" />
 		<meta name="generator" content="VuePress {{ version }}" />
 		{{{ userHeadTags }}} {{{ pageMeta }}} {{{ renderResourceHints() }}} {{{ renderStyles() }}}
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
+		<script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 		<!--vue-ssr-outlet-->
 		{{{ renderScripts() }}}
-		<script>
-			if (window.netlifyIdentity) {
-				window.netlifyIdentity.on('init', user => {
-					if (!user) {
-						window.netlifyIdentity.on('login', () => {
-							document.location.href = '/admin/';
-						});
-					}
-				});
-			}
-		</script>
 	</body>
 </html>
