--- a/.vuepress/theme/styles/fonts.styl
+++ b/.vuepress/theme/styles/fonts.styl
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Cairo:300,400,600,700&display=swap&subset=arabic');
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap');
