Add new post create-social-media-headers

--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -14,9 +14,9 @@
   --color-bg-ternary: #E2E8F0;
 
   // Text Colors
-  --color-text-primary: #1a202c;
-  --color-text-secondary: #718096;
-  --color-text-ternary: #A0AEC0;
+  --color-text-primary: #171717;
+  --color-text-secondary: #334155;
+  --color-text-ternary: #94a3b8;
 
   // Links
   --color-link-primary: #1da1f2;
