Add 2 blog posts

--- a/.vuepress/theme/styles/typography.styl
+++ b/.vuepress/theme/styles/typography.styl
@@ -42,10 +42,10 @@ h3
         font-size theme('fontSize.2xl')
 
 h4
-    font-size theme('fontSize.xl')
+    font-size theme('fontSize.lg')
     font-weight theme('fontWeight.bold')
     @media md
-        font-size theme('fontSize.2xl')
+        font-size theme('fontSize.xl')
 
 h4, h5, h6
     margin-top theme('margin.4')
