--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -16,7 +16,7 @@
   // Text Colors
   --color-text-primary: #171717;
   --color-text-secondary: #334155;
-  --color-text-ternary: #94a3b8;
+  --color-text-ternary: #7c7c7c;
 
   // Links
   --color-link-primary: #1da1f2;
@@ -45,7 +45,7 @@
 
     // Text Colors
   --color-text-primary: #EDF2F7;
-  --color-text-secondary: #718096;
+  --color-text-secondary: #dbdbdb;
   --color-text-ternary: #A0AEC0;
 
   --color-link-primary: #1da1f2;
